Initial solver functionality in place. Solves and prints to console as expected.